fixed overflow problem

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -15,7 +15,7 @@ li {
 #game-zone {
 	border-radius: 20px;
 	border: 20px ridge #333;
-	height: 100%;
+	min-height: 100%;
 	padding: 20px;
 }
 .rmText, .winner, .loser, .timesUp, .question-display, .correction, .stat, .report {
